issue-61 - align header elements

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -54,7 +54,7 @@
     margin-top: var(--spacing-vertical-m);
   }
 
-  .cards > ul > li > div {
+  .section:not(.press-cards) .cards > ul > li > div {
     height: calc(100% - 3rem);
   }
 
